--- a/FinalProject/pom.xml
+++ b/FinalProject/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <!-- spring-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.1.8.RELEASE</version>
+        </dependency>
         
         <!-- mysql-connector-java -->
         <dependency>
