--- a/FinalProject/pom.xml
+++ b/FinalProject/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>final-project</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>FinalProject</name>
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -49,6 +50,18 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.1.8.RELEASE</version>
         </dependency>
+        <!-- spring-web -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <!-- spring-webmvc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         
         <!-- mysql-connector-java -->
         <dependency>
@@ -64,6 +77,14 @@
             <version>2.2</version>
         </dependency>
         
+        <!-- javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -73,6 +94,7 @@
     </dependencies>
 
     <build>
+        <finalName>labour-system</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
