--- a/FinalProject/src/main/resources/validation.properties
+++ b/FinalProject/src/main/resources/validation.properties
@@ -1,6 +1,9 @@
 Required=This field is required.
 Size.userForm.username=Username must be between 1 adn 32 characters.
-Size.userForm.login=Login must be between 5 adn 32 characters.
+Size.userForm.login=Login must be between 5 and 32 characters.
 Duplicate.userForm.login=Such login already exists.
 Size.userForm.password=Password must be over 8 characters.
 Different.userForm.password=Password don't match.
+
+Size.requestForm.job="Job title must be between 1 and 32"
+Type.requestForm="Type can't be NONE"
